# tginspector-core

./: .gitignore  CMakeLists.txt  CMakeSettings.json  testconfig.json
src/: main.cpp
src/config/: config.cpp  config.hpp
src/sql/: checkFile.cpp  sql.hpp  writeAvatar.cpp  writeFileInfo.cpp  writeLocation.cpp  writeMessage.cpp  writeUsername.cpp
